feat: Correcciones de unificación
Se corrigen errores producidos en la unificación y, de paso, se corrige la respuesta que se daba al obtener los cumplidos pendientes, tanto para el ordenador como para la contratacion,

udistrital/Cumplidos_y_certificaciones_documentacion#105
