# swagger/swagger.json
@@ -15,6 +15,101 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/contratacion/solicitudes-pago/": {
+            "get": {
+                "tags": [
+                    "contratacion"
+                ],
+                "description": "Metodo para que el personal de c  Obtenga los contratos para la aprobacion de pago",
+                "operationId": "RevisionCumplidoContratacionController.ObtenerPendientesRevisionOrdenador",
+                "responses": {
+                    "403": {
+                        "description": ":document is empty"
+                    }
+                }
+            }
+        },
+        "/ordenador/certificado-aprobacion-pago/{id_solicitud_pago}": {
+            "get": {
+                "tags": [
+                    "ordenador"
+                ],
+                "description": "Metodo",
+                "operationId": "RevisionCumplidoOrdenadorController.GnerarAutorizaxionPago",
+                "responses": {
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/ordenador/revertir-solicitud-pago/{id_cumplido}": {
+            "get": {
+                "tags": [
+                    "ordenador"
+                ],
+                "description": "Metodo para que el ordenador  revierta el estado de un cumplido",
+                "operationId": "RevisionCumplidoOrdenadorController.RevertirSolicitud",
+                "parameters": [
+                    {
+                        "in": "de",
+                        "name": "id",
+                        "description": "path",
+                        "schema": {
+                            "$ref": "#/definitions/pago"
+                        }
+                    }
+                ],
+                "responses": {
+                    "403": {
+                        "description": ":id_cumplido is empty"
+                    }
+                }
+            }
+        },
+        "/ordenador/solicitudes-pago/{documento_ordenador}": {
+            "get": {
+                "tags": [
+                    "ordenador"
+                ],
+                "description": "Metodo para que el ordenador  Obtenga los contratos para la aprobacion de pago",
+                "operationId": "RevisionCumplidoOrdenadorController.ObtenerPendientesRevisionOrdenador",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "documento_ordenador",
+                        "description": "Documento del ordenador",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "403": {
+                        "description": ":document is empty"
+                    }
+                }
+            }
+        },
+        "/ping/ping": {
+            "get": {
+                "tags": [
+                    "ping"
+                ],
+                "description": "Realiza una prueba de ping y devuelve el estado.",
+                "operationId": "PingController.PingTest",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/map[string]interface{}{\"Success\":true,\"Status\":\"200\",\"Message\":\"Successful\",\"Data\":{}}"
+                        }
+                    },
+                    "500": {
+                        "description": "{object} map[string]interface{}{\"Success\":false,\"Status\":\"500\",\"Message\":\"Internal Server Error\"}"
+                    }
+                }
+            }
+        },
         "/solicitud-pago/cambio-estado": {
             "post": {
                 "tags": [
@@ -292,21 +387,6 @@
             }
         },
         "/supervisor/balance-financiero-contrato/{numero_contrato_suscrito}/{vigencia_contrato}": {
-        "/contratacion/solicitudes-pago/": {
-            "get": {
-                "tags": [
-                    "contratacion"
-                ],
-                "description": "Metodo para que el personal de c  Obtenga los contratos para la aprobacion de pago",
-                "operationId": "RevisionCumplidoContratacionController.ObtenerPendientesRevisionOrdenador",
-                "responses": {
-                    "403": {
-                        "description": ":document is empty"
-                    }
-                }
-            }
-        },
-        "/dependencias_supervisor/{documento_supervisor}": {
             "get": {
                 "tags": [
                     "supervisor"
@@ -466,92 +546,15 @@
                     }
                 }
             }
-        },
-        "/ordenador/certificado-aprobacion-pago/{id_solicitud_pago}": {
-            "get": {
-                "tags": [
-                    "ordenador"
-                ],
-                "description": "Metodo",
-                "operationId": "RevisionCumplidoOrdenadorController.GnerarAutorizaxionPago",
-                "responses": {
-                    "403": {
-                        "description": ""
-                    }
-                }
-            }
-        },
-        "/ordenador/revertir-solicitud-pago/{id_cumplido}": {
-            "get": {
-                "tags": [
-                    "ordenador"
-                ],
-                "description": "Metodo para que el ordenador  revierta el estado de un cumplido",
-                "operationId": "RevisionCumplidoOrdenadorController.RevertirSolicitud",
-                "parameters": [
-                    {
-                        "in": "de",
-                        "name": "id",
-                        "description": "path",
-                        "schema": {
-                            "$ref": "#/definitions/pago"
-                        }
-                    }
-                ],
-                "responses": {
-                    "403": {
-                        "description": ":id_cumplido is empty"
-                    }
-                }
-            }
-        },
-        "/ordenador/solicitudes-pago/{documento_ordenador}": {
-            "get": {
-                "tags": [
-                    "ordenador"
-                ],
-                "description": "Metodo para que el ordenador  Obtenga los contratos para la aprobacion de pago",
-                "operationId": "RevisionCumplidoOrdenadorController.ObtenerPendientesRevisionOrdenador",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "documento_ordenador",
-                        "description": "Documento del ordenador",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "403": {
-                        "description": ":document is empty"
-                    }
-                }
-            }
-        },
-        "/ping/ping": {
-            "get": {
-                "tags": [
-                    "ping"
-                ],
-                "description": "Realiza una prueba de ping y devuelve el estado.",
-                "operationId": "PingController.PingTest",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/map[string]interface{}{\"Success\":true,\"Status\":\"200\",\"Message\":\"Successful\",\"Data\":{}}"
-                        }
-                    },
-                    "500": {
-                        "description": "{object} map[string]interface{}{\"Success\":false,\"Status\":\"500\",\"Message\":\"Internal Server Error\"}"
-                    }
-                }
-            }
         }
     },
     "definitions": {
         "map[string]interface{}": {
             "title": "map[string]interface{}",
+            "type": "object"
+        },
+        "map[string]interface{}{\"Success\":true,\"Status\":\"200\",\"Message\":\"Successful\",\"Data\":{}}": {
+            "title": "map[string]interface{}{\"Success\":true,\"Status\":\"200\",\"Message\":\"Successful\",\"Data\":{}}",
             "type": "object"
         },
         "models.BalanceContrato": {
@@ -686,6 +689,15 @@
                 "Activo": {
                     "type": "boolean"
                 },
+                "Cdp": {
+                    "type": "string"
+                },
+                "Dependencia": {
+                    "type": "string"
+                },
+                "DocumentoOrdenador": {
+                    "type": "string"
+                },
                 "FechaCreacion": {
                     "type": "string",
                     "format": "datetime"
@@ -698,12 +710,27 @@
                     "type": "integer",
                     "format": "int64"
                 },
+                "NombreOrdenador": {
+                    "type": "string"
+                },
+                "NombreProveedor": {
+                    "type": "string"
+                },
                 "NumeroContrato": {
+                    "type": "string"
+                },
+                "Rp": {
+                    "type": "string"
+                },
+                "TipoContrato": {
                     "type": "string"
                 },
                 "VigenciaContrato": {
                     "type": "integer",
                     "format": "int64"
+                },
+                "VigenciaRP": {
+                    "type": "string"
                 }
             }
         },
@@ -999,14 +1026,6 @@
                     "type": "string"
                 }
             }
-
-        "map[string]interface{}{\"Success\":true,\"Status\":\"200\",\"Message\":\"Successful\",\"Data\":{}}": {
-            "title": "map[string]interface{}{\"Success\":true,\"Status\":\"200\",\"Message\":\"Successful\",\"Data\":{}}",
-            "type": "object"
-        },
-        "models.ContratosSupervisor": {
-            "title": "ContratosSupervisor",
-            "type": "object"
         },
         "pago": {
             "title": "pago",
